# haproxy-grpc-agent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
deployments/docker/: Dockerfile
deployments/systemd/: haproxy-grpc-agent.service
specs/001-core-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-agent/contracts/: agent-text-protocol.md  grpc-health-check.proto
specs/002-testcontainers-integration/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-testcontainers-integration/checklists/: requirements.md
specs/003-channel-cache-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-channel-cache-config/checklists/: requirements.md
specs/004-configurable-logging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-configurable-logging/checklists/: requirements.md
specs/005-reduce-info-logging/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-reduce-info-logging/checklists/: requirements.md
src/: checker.rs  config.rs  lib.rs  logger.rs  main.rs  metrics.rs  protocol.rs  server.rs
tests/: cache_config_test.rs  config_logging_test.rs  config_test.rs  integration_test.rs  logging_test.rs  protocol_test.rs  resilience_test.rs
tests/common/: mod.rs
tests/integration/: README.md  docker-compose.yml  haproxy.cfg
tests/integration/mock-backend/: Cargo.toml  Dockerfile
tests/integration/mock-backend/src/: main.rs
