[package]
name = "haproxy-grpc-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime - T002
tokio = { version = "1", features = ["full", "macros"] }

# gRPC client - T003
tonic = { version = "0.14.2", features = ["transport", "tls-ring"] }
tonic-prost = "0.14.2"
prost = "0.14.1"

# Metrics - T004
prometheus = "0.13"

# Serialization/Config - T005, T007
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"

# CLI parsing - T006
clap = { version = "4.5", features = ["derive"] }

# Structured logging - T008
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Concurrent data structures - T009
dashmap = "6.1.0"

# Lazy statics - T010
once_cell = "1.19"

# HTTP server for metrics
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Additional utilities
uuid = { version = "1.7", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
# T011: Optimize for size
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[dev-dependencies]
# For integration tests
bollard = "0.16"  # Docker API client
serde_json = "1.0"  # For parsing JSON logs in tests
