# T051: Mock gRPC backend for integration testing
[package]
name = "mock-grpc-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "macros"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
